--- a/server.cfg
+++ b/server.cfg
@@ -2,6 +2,9 @@
 endpoint_add_tcp "0.0.0.0:30120"
 endpoint_add_udp "0.0.0.0:30120"
 
+# Vehicle Seatbelt
+setr game_enableFlyThroughWindscreen true
+
 # PMA Voice Convars (Onesync Infinity Only) -- https://github.com/AvarianKnight/pma-voice
 ensure pma-voice
 setr voice_useNativeAudio 1
@@ -113,7 +116,12 @@ ensure qb-weathersync
 ensure qb-weed
 
 # Non-Framework
+#ensure cosmo_hud # -- https://github.com/nojdh/cosmo_hud
 ensure dpemotes # -- https://github.com/andristum/dpemotes
+#ensure esx_tpnrp_luckywheel # -- https://github.com/Sn0wBiT/esx_tpnrp_luckywheel
+#ensure linden_outlawalert # -- https://github.com/thelindat/linden_outlawalert
+#ensure mdt # -- https://github.com/distritic/mdt
+#ensure qalle_coords # -- https://github.com/qalle-git/qalle_coords
 ensure rp-radio # -- https://github.com/AvarianKnight/rp-radio
 ensure LegacyFuel # -- https://github.com/InZidiuZ/LegacyFuel
 
@@ -133,7 +141,7 @@ sets tags "default"
 
 # A valid locale identifier for your server's primary language.
 # For example "en-US", "fr-CA", "nl-NL", "de-DE", "en-GB", "pt-BR"
-sets locale "en-US" 
+sets locale "it-IT" 
 # please DO replace root-AQ on the line ABOVE with a real language! :)
 
 # Set an optional server info and connecting banner image url.
@@ -142,7 +150,7 @@ sets locale "en-US"
 #sets banner_connecting "https://url.to/image.png"
 
 # Set your server's hostname
-sv_hostname "QBCore Framework Recipe"
+sv_hostname "Las Fuentes"
 
 # Set your server's Project Name
 #sets sv_projectName "My FXServer Project"
@@ -161,7 +169,7 @@ set temp_convar "hey world!"
 
 # Remove the `#` from the below line if you do not want your server to be listed in the server browser.
 # Do not edit it if you *do* want your server listed.
-#sv_master1 ""
+sv_master1 ""
 
 # Add system admins
 add_ace group.admin command allow # allow all commands
@@ -176,7 +184,4 @@ sv_maxclients 32
 
 # Steam Web API key, if you want to use Steam authentication (https://steamcommunity.com/dev/apikey)
 # -> replace "" with the key
-set steam_webApiKey ""
-
-# License key for your server (https://keymaster.fivem.net)
-sv_licenseKey changeme
+set steam_webApiKey ECDBC8E6AAAC85D416B6B93D96C9C6D7
