--- a/server.cfg
+++ b/server.cfg
@@ -125,6 +125,8 @@ ensure mdt # -- https://github.com/distritic/mdt
 ensure rp-radio # -- https://github.com/AvarianKnight/rp-radio
 ensure LegacyFuel # -- https://github.com/InZidiuZ/LegacyFuel
 
+start saltychat
+
 # This allows players to use scripthook-based plugins such as the legacy Lambda Menu.
 # Set this to 1 to allow scripthook. Do note that this does _not_ guarantee players won't be able to use external plugins.
 sv_scriptHookAllowed 0
